GNOME Bugzilla – Bug 787613
vaapi: wrong counting of the array of attributes for vaConfig
Last modified: 2017-09-13 09:24:28 UTC
There was wrong logic to count the number of the array of attributes when creating vaConfig. It was lucky that this hasn't cause a real problem. But I got this warning lately. 0:00:01.352460782 4202 0x5607f5b2e400 WARN vaapi gstvaapicontext.c:356:config_create: Failed to create vaConfig 0:00:01.352503471 4202 0x5607f5b2e400 WARN vaapiencode gstvaapiencode.c:421:ensure_allowed_sinkpad_caps:<vaapiencodeh264-0> failed to get allowed surface formats This is because the driver reads wrong element of the array of attributes.
Created attachment 359692 [details] [review] libs: context: fix wrong counter of the array of attributes So far, it passes wrong value of counter, which is always +1, to vaCreateConfig. This fixes wrong counting of the arry of attributes.
Ooops! my fault. This is regression caused by commit e42ec3ad3c5dfcc9ae6826b6b215b8d6efd856ab
Attachment 359692 [details] pushed as 9875c0d - libs: context: fix wrong counter of the array of attributes